# wasm-component-trampoline

./: .gitignore  .vale.ini  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/: actionlint.yaml  dependabot.yaml
.github/workflows/: cron.yaml  devenv.yaml  publishing.yaml  push.yaml  scorecard-workflow.yaml  test.yaml
nix/: cargo-llvm.nix
src/: filter.rs  graph.rs  lib.rs  path.rs  semver.rs  trampoline.rs
supply-chain/: audits.toml  config.toml
tests/.cargo/: config.toml
tests/runner/: Cargo.toml  build.sh
tests/runner/src/: cli.rs  main.rs
tests/wasm/.cargo/: config.toml
tests/wasm/application/: Cargo.toml
tests/wasm/application/src/: lib.rs
tests/wasm/application/wit/: application.wit
tests/wasm/kvstore/: Cargo.toml
tests/wasm/kvstore/src/: lib.rs
tests/wasm/kvstore/wit/: kvstore.wit
tests/wasm/logger/: Cargo.toml
tests/wasm/logger/src/: lib.rs
tests/wasm/logger/wit/: logging.wit
