[workspace]
resolver = "3"
members = [
  ".",
  "tests/runner",
  "tests/wasm/[a-z]*",
]
default-members = [
  ".",
]

[package]
name = "wasm-component-trampoline"
description = "A library for linking WASM components together using host trampoline functions"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
categories = [ "wasm" ]

[workspace.package]
authors = ["ANDYL Open Source <oss@andyl.com>"]
version = "34.0.2-pre1"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[features]
default = [
    "async"
]
async = [
    "wasmtime/async",
    "wasmtime/component-model-async",
]

[workspace.dependencies]
anyhow = "1"
derivative = "2"
semver = "1"
wasmtime = { version = "34", default-features = false }
wat = { version = "1.233.0", default-features = false }
wit-bindgen = { version = "0.43", default-features = false, features = [
  "macros",
]}

[target.'cfg(unix)'.dependencies]
anyhow.workspace = true
derivative.workspace = true
semver.workspace = true
indexmap = "2"
slab = "0.4"
snafu = "0.8"
wac-types = "0.7"
wasmtime = { workspace = true, features = [
  "addr2line",
  "component-model",
  "cranelift",
  "wat",
]}

[dev-dependencies]
wat.workspace = true
