[package]
name = "runner"
version = "0.1.1"
edition.workspace = true
publish = []

[target.'cfg(unix)'.dependencies]
anyhow.workspace = true
semver.workspace = true
tokio = { version = "1.0", features = ["full"] }
wasmtime = { workspace = true, features = ["async", "component-model", "cranelift", "wat"] }
wasm-component-trampoline = { path = "../.." }
wat = {workspace = true, features = ["component-model"]}

[[bin]]
name = "async-runner"

[[bin]]
name = "fail-runner"

[[bin]]
name = "runner"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
