[package]
name = "runner"
version = "0.1.1"
edition.workspace = true
publish = []

[target.'cfg(unix)'.dependencies]
anyhow.workspace = true
semver.workspace = true
tokio = { version = "1.0", features = ["full"] }
wasmtime = { workspace = true, features = ["component-model", "async"] }
wasm-component-trampoline = { path = "../.." }

[[bin]]
name = "async-runner"

[[bin]]
name = "runner"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex.workspace = true
